# advent-of-code-2025

./: pyproject.toml
main/: day_1_puzzle_1_secret_entrance.py  day_1_puzzle_2_secret_entrance.py  day_2_puzzle_1_gift_shop.py  day_2_puzzle_2_gift_shop.py
tests/: test_day_2_puzzle_1_gift_shop.py
